--- a/ShopmeWebParent/ShopmeBackEnd/pom.xml
+++ b/ShopmeWebParent/ShopmeBackEnd/pom.xml
@@ -22,6 +22,11 @@
 		<artifactId>spring-boot-devtools</artifactId>
 	</dependency>
 	
+	<dependency>
+		<groupId>com.luv2code</groupId>
+		<artifactId>spring-security-demo</artifactId>
+		<version>1.0</version>
+	</dependency>
 	</dependencies>
 
 	<build>
