--- a/ShopmeWebParent/ShopmeBackEnd/pom.xml
+++ b/ShopmeWebParent/ShopmeBackEnd/pom.xml
@@ -21,12 +21,18 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-devtools</artifactId>
 	</dependency>
-	
+	<dependency>
+		<groupId>net.sf.supercsv</groupId>
+		<artifactId>super-csv</artifactId>
+		<version>2.4.0</version>
+	</dependency>
 	<dependency>
 		<groupId>com.luv2code</groupId>
 		<artifactId>spring-security-demo</artifactId>
 		<version>1.0</version>
 	</dependency>
+
+
 	</dependencies>
 
 	<build>
